--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,15 +16,19 @@
   "dependencies": {
     "@elastic/elasticsearch": "^9.3.1",
     "axios": "^1.13.5",
+    "bcryptjs": "^3.0.3",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "fs-extra": "^11.3.3",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.0",
     "node-cron": "^4.2.1",
-    "nodemon": "^3.1.11",
     "openai": "^6.21.0",
     "puppeteer": "^24.37.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.0.2"
   }
 }
