--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@azure/storage-blob": "^12.31.0",
     "@elastic/elasticsearch": "^9.3.1",
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
@@ -26,7 +27,8 @@
     "mongoose": "^9.2.0",
     "node-cron": "^4.2.1",
     "openai": "^6.21.0",
-    "puppeteer": "^24.37.2"
+    "puppeteer": "^24.37.2",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.0.2"
